# esp32s3_template

./: .gitmodules  CMakeLists.txt  README.md  alire.toml  esp32s3_application.gpr  light_esp32s3_demo.gpr  runtime.json  sdkconfig.defaults
.github/workflows/: main.yaml
main/: .gitignore  CMakeLists.txt  alire.toml  light_esp32s3_demo.gpr  runtime.json
main/source/: application.adb  interrupts.adb  interrupts.ads  main.adb  tasks.adb  tasks.ads
main/source/runtime/: a-interr.adb  a-interr.ads  s-interr.adb  s-interr.ads  s-osinte.ads  s-soflin.adb  s-soflin.ads  s-taprob.adb  s-taprob.ads  s-tarest.adb  s-tarest.ads  s-tasinf.ads  s-taskin.adb  s-taskin.ads
source/: main.adb
